add_library(PxlAnalyzer
    EventClassFactory/ParticleMap.cc
    EventClassFactory/TriggerStream.cc
    EventClassFactory/EventClassFactory.cc
    EventClassFactory/Resolutions.cc
    Pxl/Pxl/src/Vertex.cc
    Pxl/Pxl/src/ObjectManager.cc
    Pxl/Pxl/src/Object.cc
    Pxl/Pxl/src/Event.cc
    Pxl/Pxl/src/ConfigLoader.cc
    Pxl/Pxl/src/InputHandler.cc
    Pxl/Pxl/src/Variant.cc
    Pxl/Pxl/src/AnalysisProcess.cc
    Pxl/Pxl/src/WkPtrBase.cc
    Pxl/Pxl/src/FileFactory.cc
    Pxl/Pxl/src/Relative.cc
    Pxl/Pxl/src/InformationChunk.cc
    Pxl/Pxl/src/Random.cc
    Pxl/Pxl/src/ChunkWriter.cc
    Pxl/Pxl/src/ObjectFactory.cc
    Pxl/Pxl/src/StdFileImpl.cc
    Pxl/Pxl/src/LocalFileImpl.cc
    Pxl/Pxl/src/PluginManager.cc
    Pxl/Pxl/src/OutputHandler.cc
    Pxl/Pxl/src/Hep.cc
    Pxl/Pxl/src/NamedTMPFile.cc
    Pxl/Pxl/src/Configuration.cc
    Pxl/Pxl/src/BasicContainer.cc
    Pxl/Pxl/src/EventView.cc
    Pxl/Pxl/src/ObjectOwner.cc
    Pxl/Pxl/src/SoftRelations.cc
    Pxl/Pxl/src/functions.cc
    Pxl/Pxl/src/Collision.cc
    Pxl/Pxl/src/OutputFile.cc
    Pxl/Pxl/src/BasicNVector.cc
    Pxl/Pxl/src/File.cc
    Pxl/Pxl/src/BasicMatrix.cc
    Pxl/Pxl/src/Core.cc
    Pxl/Pxl/src/LorentzVector.cc
    Pxl/Pxl/src/Tokenizer.cc
    Pxl/Pxl/src/dCapFileImpl.cc
    Pxl/Pxl/src/ChunkReader.cc
    Pxl/Pxl/src/Particle.cc
    Pxl/Pxl/src/MessageDispatcher.cc
    Pxl/Pxl/src/AnalysisFork.cc
    Pxl/Pxl/src/Relations.cc
    Pxl/Pxl/src/sFTPFileImpl.cc
    Pxl/Pxl/src/Id.cc
    Pxl/Pxl/src/Basic3Vector.cc
    Pxl/Pxl/src/UserRecord.cc
    Pxl/Pxl/src/logging.cc
    Main/JetResolution.cc
    Main/EventAdaptor.cc
    Main/NanoAODReader.cc
    Main/SkipEvents.cc
    Main/GammaSelector.cc
    Main/PDFTool.cc
    Main/RunLumiRanges.cc
    Main/BinnedMapping.cc
    Main/MuonSelector.cc
    Main/METSelector.cc
    Main/JetTypeWriter.cc
    Main/OldNameMapper.cc
    Main/ReWeighter.cc
    Main/ScaleFactor.cc
    Main/JetSelector.cc
    Main/ParticleSplittingFunctions.cc
    Main/EleSelector.cc
    Main/EventCleaning.cc
    Main/TriggerGroup.cc
    Main/TriggerSelector.cc
    Main/EventSelector.cc
    Main/EffectiveArea.cc
    Main/ParticleMatcher.cc
    Main/PhotonEffectiveArea.cc
    Main/TauSelector.cc
    Main/Systematics.cc
    Main/GenSelector.cc
    Main/FatJetSelector.cc
    Main/ObjectSelector.cc
    Main/SystematicsInfo.cc
    Tools/dCache/dCacheBuf.cc
    Tools/MConfig.cc
    Tools/SignalHandler.cc
    Tools/AnyOption.cc
    Tools/Tools.cc
    Main/TOMLConfig.cc
)
target_include_directories(PxlAnalyzer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_options(PxlAnalyzer PUBLIC -g -c)
